package parsing;

import justificationDiagram.JustificationDiagram;

public interface Linker {

    JustificationDiagram link(String file);
}
